# j4-dmenu-desktop

./: BUILDING.md  CHANGELOG  CMakeLists.txt  HOW-TO-RELEASE  README.md  j4-dmenu-desktop.1  meson.options  version.txt
etc/: README.md  j4-dmenu-desktop  j4-dmenu-desktop.yaml  j4-dmenu-tests.yaml  meson.build
etc/deprecated/: README.md  _j4-dmenu-desktop  j4-dmenu-desktop.fish
src/: AppManager.cc  AppManager.hh  Application.hh  CMDLineAssembler.cc  CMDLineAssembler.hh  CMDLineTerm.cc  ParsingQuirks.hh  TestSearchPath.cc  main.cc
subprojects/: spdlog.wrap
subprojects/packagefiles/: dont_install_spdlog.patch
tests/: ShellUnquote.cc  TestCMDLineAssembler.cc  meson.build
tests/system_tests/: j4dd_run_helper.py  meson.build  system_test.py
tests/test_files/applications/: eagle-extra-spaces.desktop
